fixed z-index so header scrolls on top

--- a/app/assets/stylesheets/static.css.scss
+++ b/app/assets/stylesheets/static.css.scss
@@ -19,6 +19,7 @@
 	background-color: rgba(255,255,255,0.8);
 	width: 100%;
 	height: 45px;
+	z-index: 5;
 
 	h1{
 		font-family: 'Roboto Slab', serif;
